Added Plastic Surgey

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -280,6 +280,81 @@
             "description": "العمليات الجراحية النسائية الطارئة تُجرى للحالات الحادة التي تتطلب تدخلًا فوريًا للحفاظ على الحياة والصحة. تشمل هذه علاج تمزق أكياس المبيض، ثقب الرحم، قيح البوق، خراج البوق والمبيض والحمل خارج الرحم. الوقت حاسم في هذه الحالات، وفريقنا مجهز لتوفير تشخيص سريع وعلاج جراحي فوري على مدار الساعة طوال أيام الأسبوع. نعطي الأولوية لسلامة المرضى ونستخدم تقنيات طفيفة التوغل كلما أمكن ذلك، حتى في حالات الطوارئ."
         }
     },
+    "surgeryCancer": {
+        "mainTitle": "أورام النساء - التشخيص والجراحات الأورامية وعلاج السرطان من قبل جراح نسائي ذو خبرة",
+        "mainDescription": "رعاية شاملة لأورام النساء من قبل طبيب نسائي وجراح ذي خبرة. التشخيص والوقاية وعلاج سرطانات النساء بما في ذلك سرطان بطانة الرحم، عنق الرحم، الرحم، المهبل، الفرج وقناتي فالوب. جراحات أورام متقدمة، خطط علاج شخصية ورعاية رحيمة تهدف إلى الحفاظ على الصحة والخصوبة ونوعية الحياة.",
+        "seoTitle": "أورام النساء وجراحة السرطان - الدكتور سيرج تونيتسكي",
+        "seoDescription": "رعاية متخصصة لأورام النساء: التشخيص والعلاج الجراحي لسرطان بطانة الرحم، عنق الرحم، الرحم، المهبل، الفرج والأورام النسائية الخبيثة الأخرى.",
+        "cancerTypes": {
+            "endometrialCancer": "سرطان بطانة الرحم",
+            "cervicalCancer": "سرطان عنق الرحم",
+            "uterineSarcoma": "ساركوما الرحم",
+            "fallopianTubeCancer": "سرطان قناتي فالوب",
+            "vaginalCancer": "سرطان المهبل",
+            "vulvarCancer": "سرطان الفرج",
+            "choriocarcinoma": "المشيمية الورمية",
+            "metastaticTumors": "الأورام النقيلية",
+            "molarPregnancy": "الحمل العنقودي"
+        }
+    },
+    "surgeryImportant": {
+        "mainTitle": "جراحة أمراض النساء - المنظار والمنظار الرحمي والإجراءات الترميمية المعقدة بواسطة جراح نسائي ماهر",
+        "mainDescription": "خدمات جراحة أمراض النساء الشاملة بما في ذلك إجراءات المنظار والمنظار الرحمي التي يجريها جراح نسائي ذو خبرة. خبرة في استئصال كيس المبيض، استئصال الورم الليفي، استئصال الرحم، استئصال بطانة الرحم المهاجرة وعلاج حالات الرحم وعنق الرحم. تقنيات طفيفة التوغل، دقة ورعاية شخصية تركز على استعادة صحة المرأة وتحسين نوعية الحياة.",
+        "seoTitle": "جراحة وإجراءات أمراض النساء - الدكتور سيرج تونيتسكي",
+        "seoDescription": "جراحة أمراض النساء المتخصصة: المنظار، المنظار الرحمي، استئصال الورم الليفي، استئصال الرحم والإجراءات الترميمية المعقدة بواسطة جراح ذي خبرة.",
+        "importantSurgeries": {
+            "title": "العمليات الجراحية المهمة",
+            "description": "إجراءات أمراض النساء الأساسية التي تعالج الحالات الشائعة التي تؤثر على الصحة الإنجابية للمرأة. تشمل هذه العمليات تقنيات المنظار والمنظار الرحمي لعلاج أكياس المبيض، أورام الرحم الليفية، زوائد بطانة الرحم والحمل خارج الرحم. يتم إجراء كل عملية بدقة باستخدام طرق طفيفة التوغل لتقليل وقت التعافي وتحسين النتائج.",
+            "laparoscopicCystectomy": "استئصال كيس المبيض بالمنظار",
+            "hysteroscopyPolyp": "منظار رحمي مع إزالة زائدة بطانة الرحم",
+            "laparoscopicMyomectomy": "استئصال الورم الليفي بالمنظار",
+            "hysteroscopicResection": "استئصال الورم الليفي تحت المخاطي بالمنظار الرحمي",
+            "laparoscopicSalpingectomy": "استئصال قناة فالوب بالمنظار للحمل خارج الرحم",
+            "laparoscopicAdhesiolysis": "تحلل الالتصاقات بالمنظار",
+            "diagnosticLaparoscopy": "منظار تشخيصي",
+            "vacuumAspiration": "شفط الرحم بالفراغ",
+            "medicalTermination": "إنهاء الحمل الطبي",
+            "cervicalConization": "استئصال مخروطي لعنق الرحم"
+        },
+        "complexSurgeries": {
+            "title": "العمليات الجراحية المعقدة",
+            "description": "إجراءات جراحية متقدمة تتطلب خبرة وتجربة متخصصة. تعالج هذه العمليات حالات أمراض النساء المعقدة بما في ذلك بطانة الرحم المهاجرة الشديدة، هبوط أعضاء الحوض، سلس البول الإجهادي واضطرابات المبيض. يتم تخطيط وتنفيذ كل عملية بعناية باستخدام تقنيات ومعدات حديثة.",
+            "hysterectomy": "استئصال الرحم",
+            "ovarianResection": "استئصال المبيض لمتلازمة تكيس المبايض",
+            "endometriosisExcision": "استئصال بؤر بطانة الرحم المهاجرة بالمنظار",
+            "sacrocolpopexy": "تثبيت المهبل العجزي",
+            "colporrhaphy": "رأب المهبل الأمامي/الخلفي",
+            "tvtoProcedure": "إجراء TVT-O",
+            "cervicalLaser": "تبخير عنق الرحم بالليزر"
+        },
+        "specializedSurgeries": {
+            "title": "العمليات الجراحية المتخصصة",
+            "description": "إجراءات متخصصة للغاية لعلاج الأمراض المعقدة والحالات الأورامية. تتطلب هذه العمليات تدريبًا مكثفًا ومهارات متقدمة ومعرفة شاملة بتشريح أمراض النساء. تشمل الإجراءات عمليات جذرية لعلاج السرطان وإزالة الأكياس البطانية الكبيرة وإعادة بناء الهياكل التشريحية.",
+            "radicalHysterectomy": "استئصال الرحم الجذري",
+            "lymphadenectomy": "استئصال العقد اللمفاوية",
+            "largeCysts": "إزالة الأكياس البطانية الكبيرة (>5 سم)",
+            "vaginalStrictures": "استئصال تضيقات ندبة المهبل",
+            "radicalVulvectomy": "استئصال الفرج الجذري"
+        },
+        "plasticSurgery": {
+            "title": "الجراحة التجميلية",
+            "description": "إجراءات تجميلية وترميمية لمنطقة الأعضاء التناسلية الأنثوية تُجرى بدقة ورعاية. تعالج هذه العمليات المخاوف الوظيفية والتجميلية، مما يساعد النساء على الشعور براحة أكبر وثقة. يتم إجراء العمليات باستخدام تقنيات حديثة تقلل من الندوب وتضمن نتائج طبيعية المظهر.",
+            "labiaplasty": "تجميل الشفرين (جراحة الشفرين الصغيرين)",
+            "hymenoplasty": "رأب غشاء البكارة (استعادة غشاء البكارة)"
+        }
+    },
+    "surgeryPlastic": {
+        "mainTitle": "أمراض النساء التجميلية والجمالية - تجميل الشفرين، رأب غشاء البكارة، البوتوكس وإجراءات التجديد من قبل جراح نسائي",
+        "mainDescription": "أمراض النساء الجمالية والتجميلية التي يقوم بها جراح نسائي ذو خبرة. العمليات الجراحية الحميمة المهنية بما في ذلك تجميل الشفرين ورأب غشاء البكارة، بالإضافة إلى العلاجات التجميلية المتقدمة مثل تجديد المهبل والبوتوكس واستعادة الأنسجة. نهج شخصي وآمن وسري يهدف إلى تحسين الراحة والثقة والصحة النسائية.",
+        "seoTitle": "أمراض النساء التجميلية والجمالية - الدكتور سيرج تونيتسكي",
+        "seoDescription": "أمراض النساء الجمالية: تجميل الشفرين، رأب غشاء البكارة، تجديد المهبل، البوتوكس والجراحة التجميلية الحميمة من قبل جراح ذي خبرة.",
+        "plasticSurgeries": {
+            "title": "العمليات الجراحية المهمة",
+            "description": "إجراءات الجراحة التجميلية الحميمة التي يتم إجراؤها بخبرة ودقة وسرية تامة. تم تصميم هذه العمليات لتحسين المظهر الجمالي والراحة الوظيفية للمنطقة الحميمة. يتم تخصيص كل إجراء للاحتياجات والمخاوف الفردية، باستخدام تقنيات جراحية متقدمة تضمن الحد الأدنى من الندبات والتعافي السريع والنتائج الطبيعية. نقدم استشارة شاملة قبل الجراحة ومعلومات مفصلة حول الإجراءات ورعاية دقيقة بعد الجراحة لضمان الشفاء الأمثل ورضا المريضة.",
+            "labiaplasty": "تجميل الشفرين (جراحة الشفرين الصغيرين)",
+            "hymenoplasty": "رأب غشاء البكارة (استعادة غشاء البكارة)"
+        }
+    },
     "stories": {
         "title": "قصص النجاح",
         "fertility": {
