--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -280,6 +280,81 @@
       "description": "ניתוחים גינקולוגיים דחופים מבוצעים במצבים חריפים הדורשים התערבות מיידית לשמירה על חיים ובריאות. אלה כוללים טיפול בקרע ציסטות שחלות, ניקוב רחם, פיוסלפינקס, מורסה טובו-אוברית והריון חוץ רחמי. הזמן קריטי במקרים אלה, והצוות שלנו מצויד לספק אבחון מהיר וטיפול כירורגי מיידי 24/7. אנו נותנים עדיפות לבטיחות המטופלות ומשתמשים בטכניקות פולשניות מינימלית במידת האפשר, אפילו במצבי חירום."
     }
   },
+  "surgeryCancer": {
+    "mainTitle": "אונקולוגיה גינקולוגית - אבחון, ניתוחים אונקולוגיים וטיפול בסרטן על ידי מנתח גינקולוג מנוסה",
+    "mainDescription": "טיפול אונקולוגי גינקולוגי מקיף על ידי גינקולוג ומנתח מנוסה. אבחון, מניעה וטיפול בסרטן נשים כולל סרטן רירית הרחם, צוואר הרחם, הרחם, הנרתיק, הפות וחצוצרות הרחם. ניתוחים אונקולוגיים מתקדמים, תוכניות טיפול מותאמות אישית וטיפול חמלה שמטרתו לשמר בריאות, פוריות ואיכות חיים.",
+    "seoTitle": "אונקולוגיה גינקולוגית וניתוחי סרטן - ד״ר סרגיי טוניצקי",
+    "seoDescription": "טיפול אונקולוגי גינקולוגי מומחה: אבחון וטיפול כירורגי של סרטן רירית הרחם, צוואר הרחם, הרחם, הנרתיק, הפות וגידולים ממאירים גינקולוגיים אחרים.",
+    "cancerTypes": {
+      "endometrialCancer": "סרטן רירית הרחם",
+      "cervicalCancer": "סרטן צוואר הרחם",
+      "uterineSarcoma": "סרקומה של הרחם",
+      "fallopianTubeCancer": "סרטן חצוצרות הרחם",
+      "vaginalCancer": "סרטן הנרתיק",
+      "vulvarCancer": "סרטן הפות",
+      "choriocarcinoma": "כוריוקרצינומה",
+      "metastaticTumors": "גידולים גרורתיים",
+      "molarPregnancy": "הריון שלפוחיתי"
+    }
+  },
+  "surgeryImportant": {
+    "mainTitle": "כירורגיה גינקולוגית - לפרוסקופיה, היסטרוסקופיה והליכים שחזורים מורכבים על ידי מנתח גינקולוג מיומן",
+    "mainDescription": "שירותי כירורגיה גינקולוגית מקיפים כולל הליכים לפרוסקופיים והיסטרוסקופיים המבוצעים על ידי מנתח גינקולוג מנוסה. מומחיות בציסטקטומיה שחלתית, מיומקטומיה, היסטרקטומיה, כריתת אנדומטריוזיס וטיפול במצבי רחם וצוואר הרחם. טכניקות פולשניות מינימלית, דיוק וטיפול מותאם אישית המתמקד בשחזור בריאות הנשים ושיפור איכות החיים.",
+    "seoTitle": "כירורגיה והליכים גינקולוגיים - ד״ר סרגיי טוניצקי",
+    "seoDescription": "כירורגיה גינקולוגית מומחית: לפרוסקופיה, היסטרוסקופיה, מיומקטומיה, היסטרקטומיה והליכים שחזורים מורכבים על ידי מנתח מנוסה.",
+    "importantSurgeries": {
+      "title": "ניתוחים חשובים",
+      "description": "הליכים גינקולוגיים חיוניים המטפלים במצבים נפוצים המשפיעים על בריאות הרבייה של נשים. ניתוחים אלה כוללים טכניקות לפרוסקופיות והיסטרוסקופיות לטיפול בציסטות שחלות, מיומות רחם, פוליפים אנדומטריאליים והריונות חוץ רחמיים. כל הליך מבוצע בדיוק באמצעות שיטות פולשניות מינימלית להפחתת זמן ההחלמה ושיפור התוצאות. הגישה שלנו מעניקה עדיפות לבטיחות המטופלת, נוחות ושימור פוריות במידת האפשר.",
+      "laparoscopicCystectomy": "ציסטקטומיה שחלתית לפרוסקופית",
+      "hysteroscopyPolyp": "היסטרוסקופיה עם הסרת פוליפ אנדומטריאלי",
+      "laparoscopicMyomectomy": "מיומקטומיה לפרוסקופית",
+      "hysteroscopicResection": "כריתה היסטרוסקופית של מיומה תת-רירית",
+      "laparoscopicSalpingectomy": "סלפינגקטומיה לפרוסקופית להריון חוץ רחמי",
+      "laparoscopicAdhesiolysis": "אדהזיוליזיס לפרוסקופי",
+      "diagnosticLaparoscopy": "לפרוסקופיה אבחנתית",
+      "vacuumAspiration": "שאיבת ואקום של חלל הרחם",
+      "medicalTermination": "הפסקת הריון רפואית",
+      "cervicalConization": "קוניזציה של צוואר הרחם"
+    },
+    "complexSurgeries": {
+      "title": "ניתוחים מורכבים",
+      "description": "הליכים כירורגיים מתקדמים הדורשים מומחיות וניסיון מיוחדים. פעולות אלה מטפלות במצבים גינקולוגיים מורכבים כולל אנדומטריוזיס חמור, צניחת איברי האגן, בריחת שתן ממאמץ והפרעות שחלתיות. כל ניתוח מתוכנן ומבוצע בקפידה באמצעות טכניקות וציוד חדישים. אנו משלבים דיוק כירורגי עם טיפול מקיף לפני ואחרי הניתוח להבטחת תוצאות מיטביות ושביעות רצון המטופלת.",
+      "hysterectomy": "היסטרקטומיה",
+      "ovarianResection": "כריתת שחלות ל-PCOS",
+      "endometriosisExcision": "כריתה לפרוסקופית של מוקדי אנדומטריוזיס",
+      "sacrocolpopexy": "סקרוקולפופקסיה",
+      "colporrhaphy": "קולפורפיה קדמית/אחורית",
+      "tvtoProcedure": "הליך TVT-O",
+      "cervicalLaser": "אידוי לייזר של צוואר הרחם"
+    },
+    "specializedSurgeries": {
+      "title": "ניתוחים מתמחים",
+      "description": "הליכים מתמחים ביותר לטיפול בפתולוגיות מורכבות ומצבים אונקולוגיים. ניתוחים אלה דורשים הכשרה מקיפה, כישורים מתקדמים וידע מקיף באנטומיה גינקולוגית. הליכים כוללים ניתוחים רדיקליים לטיפול בסרטן, הסרת ציסטות אנדומטריוטיות גדולות ושחזור מבנים אנטומיים. כל מקרה מקבל תשומת לב אישית עם ייעוץ מפורט, תכנון יסודי וביצוע כירורגי מומחה.",
+      "radicalHysterectomy": "היסטרקטומיה רדיקלית",
+      "lymphadenectomy": "לימפדנקטומיה",
+      "largeCysts": "הסרת ציסטות אנדומטריוטיות גדולות (>5 ס״מ)",
+      "vaginalStrictures": "כריתת היצרויות צלקת נרתיקיות",
+      "radicalVulvectomy": "וולבקטומיה רדיקלית"
+    },
+    "plasticSurgery": {
+      "title": "כירורגיה פלסטית",
+      "description": "הליכים אסתטיים ושחזוריים של אזור המין הנשי המבוצעים בדיוק ובטיפול. ניתוחים אלה מטפלים בחששות תפקודיים וקוסמטיים כאחד, ועוזרים לנשים להרגיש יותר נוחות ובטוחות. הליכים מבוצעים באמצעות טכניקות מודרניות הממזערות צלקות ומבטיחות תוצאות בעלות מראה טבעי. אנו מספקים ייעוץ מקיף, הסבר מפורט של הליכים וטיפול המשך קפדני להבטחת שביעות רצון המטופלת וריפוי אופטימלי.",
+      "labiaplasty": "לביופלסטיקה (ניתוח השפתיים הקטנות)",
+      "hymenoplasty": "הימנופלסטיה (שחזור קרום הבתולין)"
+    }
+  },
+  "surgeryPlastic": {
+    "mainTitle": "כירורגיה פלסטית ואסתטית גינקולוגית - לביופלסטיקה, הימנופלסטיקה, בוטוקס והליכי התחדשות על ידי מנתח גינקולוג",
+    "mainDescription": "גינקולוגיה אסתטית ופלסטית המבוצעת על ידי מנתח גינקולוג מנוסה. ניתוחים אינטימיים מקצועיים כולל לביופלסטיקה והימנופלסטיה, כמו גם טיפולים אסתטיים מתקדמים כגון התחדשות נרתיקית, בוטוקס ושיקום רקמות. גישה מותאמת אישית, בטוחה ודיסקרטית שמטרתה לשפר נוחות, ביטחון ובריאות נשית.",
+    "seoTitle": "כירורגיה פלסטית ואסתטית גינקולוגית - ד״ר סרגיי טוניצקי",
+    "seoDescription": "גינקולוגיה אסתטית: לביופלסטיקה, הימנופלסטיה, התחדשות נרתיקית, בוטוקס וכירורגיה פלסטית אינטימית על ידי מנתח מנוסה.",
+    "plasticSurgeries": {
+      "title": "ניתוחים חשובים",
+      "description": "הליכי כירורגיה פלסטית אינטימית המבוצעים עם מומחיות, דיוק וסודיות מוחלטת. ניתוחים אלה מיועדים לשפר הן את המראה האסתטי והן את הנוחות התפקודית של האזור האינטימי. כל הליך מותאם לצרכים ולחששות אישיים, תוך שימוש בטכניקות כירורגיות מתקדמות המבטיחות צלקות מינימליות, החלמה מהירה ותוצאות טבעיות. אנו מספקים ייעוץ מקיף לפני הניתוח, מידע מפורט על ההליכים וטיפול קפדני לאחר הניתוח להבטחת ריפוי אופטימלי ושביעות רצון המטופלת.",
+      "labiaplasty": "לביופלסטיקה (ניתוח השפתיים הקטנות)",
+      "hymenoplasty": "הימנופלסטיה (שחזור קרום הבתולין)"
+    }
+  },
   "stories": {
     "title": "סיפורי הצלחה",
     "fertility": {
