--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -280,7 +280,7 @@
     },
     "gynecologyPlanned": {
         "mainTitle": "Гинеколог в Израиле предлагает профессиональную диагностику, лечение и консультации с заботой о женском здоровье",
-        "mainDescription": "Приём опытного гинеколога в Израиле: диагностика, лечение, профилактика и сопровождение женского здоровья. Современные методы, УЗИ, анализы, лечение воспалений, гормональных нарушений и планирование беременности. Индивидуальный подход, деликатность и доверие — частная практика доктора.",
+        "mainDescription": "Приём опытного гинеолога в Израиле: диагностика, лечение, профилактика и сопровождение женского здоровья. Современные методы, УЗИ, анализы, лечение воспалений, гормональных нарушений и планирование беременности. Индивидуальный подход, деликатность и доверие — частная практика доктора.",
         "seoTitle": "Гинекологическое лечение и хирургия - Клиника Доктора Сергея Туницкого",
         "seoDescription": "Комплексное гинекологическое обслуживание, включая плановые, среднего риска и экстренные операции. Профессиональная диагностика и лечение современными методами.",
         "plannedSurgeries": {
@@ -294,6 +294,81 @@
         "emergencySurgeries": {
             "title": "Экстренные операции",
             "description": "Экстренные гинекологические операции выполняются при острых состояниях, требующих немедленного вмешательства для сохранения жизни и здоровья. К ним относятся лечение разрывов кист яичников, перфорации матки, пиосальпинкса, тубоовариального абсцесса и внематочной беременности. Время критично в этих случаях, и наша команда оснащена для обеспечения быстрой диагностики и немедленного хирургического лечения 24/7. Мы приоритезируем безопасность пациентов и используем малоинвазивные методы, когда это возможно, даже в экстренных ситуациях."
+        }
+    },
+    "surgeryCancer": {
+        "mainTitle": "Гинекологическая онкология — диагностика, онкологические операции и лечение рака опытным хирургом-гинекологом",
+        "mainDescription": "Комплексная гинекологическая онкологическая помощь от опытного гинеколога и хирурга. Диагностика, профилактика и лечение женских раковых заболеваний, включая рак эндометрия, шейки матки, матки, влагалища, вульвы и фаллопиевых труб. Передовые онкологические операции, индивидуальные планы лечения и заботливый подход, направленный на сохранение здоровья, фертильности и качества жизни.",
+        "seoTitle": "Гинекологическая онкология и онкохирургия - Доктор Сергей Туницкий",
+        "seoDescription": "Экспертная гинекологическая онкологическая помощь: диагностика и хирургическое лечение рака эндометрия, шейки матки, матки, влагалища, вульвы и других гинекологических злокачественных опухолей.",
+        "cancerTypes": {
+            "endometrialCancer": "Рак эндометрия",
+            "cervicalCancer": "Рак шейки матки",
+            "uterineSarcoma": "Саркома матки",
+            "fallopianTubeCancer": "Рак фаллопиевых труб",
+            "vaginalCancer": "Рак влагалища",
+            "vulvarCancer": "Рак вульвы",
+            "choriocarcinoma": "Хориокарцинома",
+            "metastaticTumors": "Метастатические опухоли",
+            "molarPregnancy": "Молярная беременность"
+        }
+    },
+    "surgeryImportant": {
+        "mainTitle": "Гинекологическая хирургия — лапароскопия, гистероскопия и сложные реконструктивные процедуры опытным хирургом-гинекологом",
+        "mainDescription": "Комплексные услуги гинекологической хирургии, включая лапароскопические и гистероскопические процедуры, выполняемые опытным хирургом-гинекологом. Экспертиза в цистэктомии яичников, миомэктомии, гистерэктомии, иссечении эндометриоза и лечении заболеваний матки и шейки матки. Минимально инвазивные техники, точность и персонализированный уход, направленные на восстановление женского здоровья и улучшение качества жизни.",
+        "seoTitle": "Гинекологическая хирургия и процедуры - Доктор Сергей Туницкий",
+        "seoDescription": "Экспертная гинекологическая хирургия: лапароскопия, гистероскопия, миомэктомия, гистерэктомия и сложные реконструктивные процедуры опытным хирургом.",
+        "importantSurgeries": {
+            "title": "Важные операции",
+            "description": "Основные гинекологические процедуры для лечения распространенных заболеваний, влияющих на репродуктивное здоровье женщин. Эти операции включают лапароскопические и гистероскопические техники для лечения кист яичников, миом матки, полипов эндометрия и внематочной беременности. Каждая процедура выполняется с точностью с использованием минимально инвазивных методов для сокращения времени восстановления и улучшения результатов. Наш подход приоритизирует безопасность пациента, комфорт и сохранение фертильности, когда это возможно.",
+            "laparoscopicCystectomy": "Лапароскопическая цистэктомия яичника",
+            "hysteroscopyPolyp": "Гистероскопия с удалением полипа эндометрия",
+            "laparoscopicMyomectomy": "Лапароскопическая миомэктомия",
+            "hysteroscopicResection": "Гистероскопическая резекция подслизистой миомы",
+            "laparoscopicSalpingectomy": "Лапароскопическая сальпингэктомия при внематочной беременности",
+            "laparoscopicAdhesiolysis": "Лапароскопический адгезиолизис",
+            "diagnosticLaparoscopy": "Диагностическая лапароскопия",
+            "vacuumAspiration": "Вакуумная аспирация полости матки",
+            "medicalTermination": "Медицинское прерывание беременности",
+            "cervicalConization": "Конизация шейки матки"
+        },
+        "complexSurgeries": {
+            "title": "Сложные операции",
+            "description": "Продвинутые хирургические процедуры, требующие специализированной экспертизы и опыта. Эти операции направлены на лечение сложных гинекологических состояний, включая тяжелый эндометриоз, пролапс тазовых органов, стрессовое недержание мочи и заболевания яичников. Каждая операция тщательно планируется и выполняется с использованием современных техник и оборудования. Мы сочетаем хирургическую точность с комплексным пре и постоперационным уходом для обеспечения оптимальных результатов и удовлетворенности пациентов.",
+            "hysterectomy": "Гистерэктомия",
+            "ovarianResection": "Резекция яичников при СПКЯ",
+            "endometriosisExcision": "Лапароскопическое иссечение очагов эндометриоза",
+            "sacrocolpopexy": "Сакрокольпопексия",
+            "colporrhaphy": "Передняя/задняя кольпорафия",
+            "tvtoProcedure": "Процедура TVT-O",
+            "cervicalLaser": "Лазерная вапоризация шейки матки"
+        },
+        "specializedSurgeries": {
+            "title": "Специализированные операции",
+            "description": "Высокоспециализированные процедуры для лечения сложных патологий и онкологических заболеваний. Эти операции требуют обширной подготовки, продвинутых навыков и комплексного знания гинекологической анатомии. Процедуры включают радикальные операции для лечения рака, удаление больших эндометриоидных кист и реконструкцию анатомических структур. Каждый случай получает индивидуальное внимание с детальной консультацией, тщательным планированием и экспертным хирургическим выполнением.",
+            "radicalHysterectomy": "Радикальная гистерэктомия",
+            "lymphadenectomy": "Лимфаденэктомия",
+            "largeCysts": "Удаление больших эндометриоидных кист (>5 см)",
+            "vaginalStrictures": "Иссечение рубцовых стриктур влагалища",
+            "radicalVulvectomy": "Радикальная вульвэктомия"
+        },
+        "plasticSurgery": {
+            "title": "Пластическая хирургия",
+            "description": "Эстетические и реконструктивные процедуры женской половой области, выполняемые с точностью и заботой. Эти операции решают как функциональные, так и косметические проблемы, помогая женщинам чувствовать себя более комфортно и уверенно. Процедуры выполняются с использованием современных техник, которые минимизируют рубцевание и обеспечивают естественно выглядящие результаты. Мы предоставляем комплексную консультацию, детальное объяснение процедур и внимательный последующий уход для обеспечения удовлетворенности пациентов и оптимального заживления.",
+            "labiaplasty": "Лабиопластика (операция на малых половых губах)",
+            "hymenoplasty": "Гименопластика (восстановление девственной плевы)"
+        }
+    },
+    "surgeryPlastic": {
+        "mainTitle": "Пластическая и эстетическая гинекология — лабиопластика, гименопластика, ботокс и процедуры омоложения хирургом-гинекологом",
+        "mainDescription": "Эстетическая и пластическая гинекология, выполняемая опытным хирургом-гинекологом. Профессиональные интимные операции, включая лабиопластику и гименопластику, а также передовые эстетические процедуры, такие как вагинальное омоложение, ботокс и восстановление тканей. Персонализированный, безопасный и деликатный подход, направленный на улучшение комфорта, уверенности и женского здоровья.",
+        "seoTitle": "Пластическая и эстетическая гинекология - Доктор Сергей Туницкий",
+        "seoDescription": "Эстетическая гинекология: лабиопластика, гименопластика, вагинальное омоложение, ботокс и интимная пластическая хирургия опытным хирургом.",
+        "plasticSurgeries": {
+            "title": "Важные операции",
+            "description": "Процедуры интимной пластической хирургии, выполняемые с экспертизой, точностью и полной конфиденциальностью. Эти операции разработаны для улучшения как эстетического вида, так и функционального комфорта интимной области. Каждая процедура адаптирована к индивидуальным потребностям и проблемам, используя передовые хирургические техники, которые обеспечивают минимальное рубцевание, быстрое восстановление и естественные результаты. Мы предоставляем комплексную предоперационную консультацию, детальную информацию о процедурах и внимательный послеоперационный уход для обеспечения оптимального заживления и удовлетворенности пациентов.",
+            "labiaplasty": "Лабиопластика (операция на малых половых губах)",
+            "hymenoplasty": "Гименопластика (восстановление девственной плевы)"
         }
     },
     "stories": {
